--- a/ProyectoFinalAp2/Pages/Registros/CategoriasComponent.razor
+++ b/ProyectoFinalAp2/Pages/Registros/CategoriasComponent.razor
@@ -102,7 +102,14 @@
         if (!aux)
             return;
 
-        paso = CategoriasBLL.Guardar(categorias);
+        if(categorias.CategoriaId == 0)
+            paso = CategoriasBLL.Guardar(categorias);
+        else
+        {
+            if (CategoriasBLL.ExisteParaModificar(categorias.CategoriaId))
+                paso = CategoriasBLL.Guardar(categorias);
+        }
+
 
         if (paso)
         {
