--- a/ProyectoFinalAp2/Pages/Index.razor
+++ b/ProyectoFinalAp2/Pages/Index.razor
@@ -30,7 +30,7 @@
         <a href="Facturas">
             <div class="card-body" style="background-color: #CA6F1E">
                 <span class="icon-business  text-center text-white"></span>
-                <p class="text-center text-white">Facturacion</p>
+                <p class="text-center text-white">Facturación</p>
             </div>
         </a>
 
@@ -53,9 +53,9 @@
 <!-- Content section -->
 <section class="py-5">
     <div class="container">
-        <h1>Introduccion</h1>
+        <h1>Presentación</h1>
         <p class="lead">ButterSoft</p>
-        <p>Buttersoft es un sistema ideado y desarrollado por un equipo de programadores como requerimiento de la asignatura <strong>Programacion Aplicada II</strong></p>
+        <p>Buttersoft es un sistema ideado y desarrollado por un equipo de programadores como requerimiento de la asignatura <strong>Programación Aplicada II</strong></p>
     </div>
 </section>
 
@@ -71,14 +71,14 @@
         <h1>Contenido</h1>
         <p class="lead">ButterSoft Por Dentro</p>
         <p>
-            ButterSoft incluye varios modulos y los integra en un sistema bastante facil de usar. Los modulos a los que podra
+            ButterSoft incluye varios módulos y los integra en un sistema bastante fácil de usar. Los módulos a los que podrá
             acceder son:
         </p>
 
-        <ul class="list-group-item-primary">Modulo de Clientes</ul>
-        <ul class="list-group-item-primary">Modulo de Productos</ul>
-        <ul class="list-group-item-primary">Modulo de Facturacion</ul>
-        <ul class="list-group-item-primary">Modulo de Entrada de Productos</ul>
+        <ul class="list-group-item-primary">Módulo de Clientes</ul>
+        <ul class="list-group-item-primary">Módulo de Productos</ul>
+        <ul class="list-group-item-primary">Módulo de Facturación</ul>
+        <ul class="list-group-item-primary">Módulo de Entrada de Productos</ul>
         <ul class="list-group-item-primary">Consultas</ul>
         <ul class="list-group-item-primary">Reportes</ul>
 
