--- a/ProyectoFinalAp2/Pages/Consultas/C_Categorias.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_Categorias.razor
@@ -182,6 +182,8 @@
                         CargarParaExportar();
                         break;
                 }
+
+                this.auxCategoriaLista = lista;
             }
             if (lista.Count() == 0)
             {
