--- a/ProyectoFinalAp2/Pages/Registros/R_EntradaProductos.razor
+++ b/ProyectoFinalAp2/Pages/Registros/R_EntradaProductos.razor
@@ -300,5 +300,6 @@
     private void EliminarProducto(Entidades.DetalleEntradaProductos detalle)
     {
         entradaProductos.DetalleEntrada.Remove(detalle);
+        entradaProductos.CantidadTotal -= detalle.Cantidad;
     }
 }
